jag lade till en ny kommentar för att visa brancher

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <div class="wrapper">
+        <!-- ny kommentar för att visa brancher -->
         <header class="header">
             <h1 style="color: white;">REDDIT-LOGO</h1>
         </header>
